--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -1,30 +1,111 @@
+.dataTables_length,
+.dataTables_filter,
+.dataTables_info,
+.dataTables_paginate {
+  padding: 1rem;
+}
 
-  .dataTables_length,.dataTables_filter,.dataTables_info ,.dataTables_paginate {padding: 20px;}
-  .swal2-container {z-index: 20000 !important;}
-  .bootstrap-select>.dropdown-toggle {
-    border: 1px solid #d9dee3;
-    border-radius: 0.375rem;}
-    h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
-    line-height: 2;}
+div.dataTables_wrapper div.dataTables_filter input {
+  margin-left: 0 !important;
+}
 
-    .filter-select {
-      display: inline;
-      float: right;
-      /* width: 100%; */
-      padding: 0.4375rem 1.875rem 0.4375rem 0.875rem;
-      -moz-padding-start: calc(0.875rem - 3px);
-      font-size: 0.9375rem;
-      font-weight: 400;
-      line-height: 1.53;
-      color: #697a8d;
-      background-color: #fff;
-      background-repeat: no-repeat;
-      background-position: right 0.875rem center;
-      background-size: 17px 12px;
-      border: 1px solid #d9dee3;
-      border-radius: 0.375rem;
-      transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-      -webkit-appearance: none;
-      -moz-appearance: none;
-      appearance: none;
-    }
+.dataTables_filter {
+  text-align: end !important;
+}
+
+.dataTable th,
+td,
+tr {
+  text-align: start !important;
+}
+
+.dataTable .dataTables_empty{
+  text-align: center !important;
+}
+
+.dataTables_filter input{
+  display: block;
+  width: 100%;
+  padding: 0.4375rem 0.875rem;
+  font-size: 0.9375rem;
+  font-weight: 400;
+  line-height: 1.53;
+  background-clip: padding-box;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  border-radius: 0.375rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.dataTables_length select {
+  display: block;
+  width: 100%;
+  padding: 0.4375rem 1.875rem 0.4375rem 0.875rem;
+  -moz-padding-start: calc(0.875rem - 3px);
+  font-size: 0.9375rem;
+  font-weight: 400;
+  line-height: 1.53;
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='rgba%2867, 89, 113, 0.6%29' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/%3e%3c/svg%3e");
+  background-repeat: no-repeat;
+  background-position: right 0.875rem center;
+  background-size: 17px 12px;
+  border-radius: 0.375rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+.swal2-container {
+  z-index: 20000 !important;
+}
+
+.bootstrap-select>.dropdown-toggle {
+  border: 1px solid #d9dee3;
+  border-radius: 0.375rem;
+}
+
+h6,
+.h6,
+h5,
+.h5,
+h4,
+.h4,
+h3,
+.h3,
+h2,
+.h2,
+h1,
+.h1 {
+  line-height: 2;
+  margin: 0;
+  display: flex;
+  align-items: center;
+}
+
+.filter-select {
+  width: 174.4px !important;
+}
+
+.table-header {
+  width: 100%;
+  padding: 1rem;
+  margin: 0;
+  background-color: transparent;
+  border-bottom: 0 solid #d9dee3;
+}
+.table-header .row {
+  margin: 0 !important;
+}
+
+.inline-spacing {
+  margin: 0 0.5rem 0 0.5rem !important;
+}
+
+.row {
+  --bs-gutter-x: 0 !important;
+  --bs-gutter-y: 0 !important;
+}
+
+
